// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile message button test Test not present 1`] = `
<div
  className="nti-button message flyout-closed"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span>
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </span>
</div>
`;

exports[`User profile message button test Test present 1`] = `
<div
  className="nti-link-to-path"
  to="#"
>
  <div
    className="nti-button message available"
  >
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </div>
</div>
`;
